# vae_mnist_backend

./: .gitignore  main.py  pyproject.toml  requirements.txt
parameter/: 100.pth  middle.npy
